--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Distribution results / packaging results
 results/
 results2/
-results3/
-*.json
+#results3/
+#*.json
 *.txt
 
 # Byte-compiled / optimized / DLL files
